<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Lapses</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lapses">Lapses</string>
	<string name="lapse">Lapse</string>
	<string name="timer">Timer</string>
	<string name="help">Help</string>
	<string name="accept">Accept</string>
	<string name="finalmovie">FINAL MOVIE</string>
	<string name="duration">Duration</string>
	<string name="fps">FPS</string>
	<string name="shootingsession">SHOOTING SESSION</string>
	<string name="interval">Interval</string>
	<string name="pictotal">pic. total</string>
	<string name="scale">Scale</string>
	<string name="scaledialog">Set the maximum duration for this shooting session. The session\’s slider will be adjusted to this maximum, allowing you to use it more accurately.</string>
	<string name="hide">Hide</string>
	<string name="location">Refresh location</string>
	<string name="planned">Planned:</string>
	<string name="every">1 picture every</string>
	<string name="retrievinglocation">Retrieving location</string>
	<string name="description1">Lapses helps you plan your time-lapse captures. An external camera must be used, as the app will not take pictures for you.</string>
	<string name="description2">In a time-lapse the image acquisition should be adjusted to the event to be registered. It has to last as long as the event, and the catch rate should be adjusted to the changes speed. In addition, you should also think about how you will show it to the world: how much condensed in time will it be, and how soft or suddenly it will be showed.</string>
	<string name="description3">All these parameters are related and should be planned before shooting. Enter the parameters in Lapse, and adjust your capture by using the sliders. When editing a parameter, Lapse will change the rest following an intuitive logic.</string>
	<string name="about1">Idea and execution: Francisco Melado</string>
	<string name="about2">Java developing: Cintia Folgado</string>
	<string name="about3">Logo: David Galicia</string>
	<string name="aboutDE">German translation: Isabel Melado</string>
	<string name="about4">francisco.melado.morillo@gmail.com</string>
	<string name="about5">https://plus.google.com/b/100806975056898941796/100806975056898941796/posts</string>
	<string name="about6">This application is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
	<string name="about7">http://www.gnu.org/licenses/gpl-3.0.html</string>
	<string name="about8">Download the source code:</string>
	<string name="about9">http://dl.dropbox.com/u/1843470/lapses_v1.zip</string>

</resources>
