<?xml version="1.0" encoding="utf-8"?>
	
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    
	<PreferenceCategory
		android:key="category_settings"
		android:title="@string/menu_settings">
	
	    <Preference
            android:key="scale"
            android:title="@string/scale"
			android:defaultValue="2" />
	
    </PreferenceCategory>
	
    <!-- opens a nested subscreen -->
    <PreferenceScreen
        android:key="screen_help"
        android:title="@string/help"
        android:persistent="false">
		
        <Preference
            android:key="description"
            android:title="@string/description1" />
		
		<Preference android:title="email" >
			<intent android:action="android.intent.action.VIEW"
				android:data="@string/about4" />
		</Preference>
		
		<Preference android:title="google+" >
			<intent android:action="android.intent.action.VIEW"
				android:data="@string/about5" />
		</Preference>
		
		<Preference android:title="license" >
			<intent android:action="android.intent.action.VIEW"
				android:data="@string/about7" />
		</Preference>
	
	</PreferenceScreen>
		
</PreferenceScreen>
